2006-01-13  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.c: Added krb5 checks while invoking
	change_passwd_cb() and exchange_config_listener_authenticate().

2006-01-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #271546
	* exchange-folder.c: (org_gnome_exchange_calendar_subscription),
	(org_gnome_exchange_addressbook_subscription),
	(org_gnome_exchange_tasks_subscription),
	(org_gnome_exchange_inbox_subscription): Mark the string for completion.

2006-01-12  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.c (exchange_config_listener_authenticate): 
	Checking for the password expired error code during connect and if the
	password is expired, showing the error message, prompting for resetting
	the password and trying to connect again with the new password.
	Checking  if the password will expire in next a few days, which is 
	specified by the user during account creation, and if yes, showing
	the corresponding error message to the user, which allows him to change
	his password. 
	Fixes #326060.
	Also, Checking for the quota related error codes and displaying the
	corresponding error/warning messages to the user. Fixes #326087.

	* org-gnome-exchange-operations.error.xml: Added a space.

	* exchange-passwd-expiry.glade: Added new.

	* Makefile.am: Added exchange-passwd-expiry.glade.

2006-01-11  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #316100
	
	* org-gnome-exchange-ab-subscription.xml:
	* org-gnome-exchange-tasks-subscription.xml:
	* org-gnome-folder-permissions.xml:
	* org-gnome-folder-subscription.xml:
	Removed empty menu entry which was pointing to Tools menu.

2006-01-09  Sushma Rai  <rsushma@novell.com>

	* exchange-folder-subscription.c (create_folder_subscription_dialog):
	Instead of gtk_dialog_run(), calling gtk_widget_show().
	(dialog_destroy): Added callback to do the cleanup on closing the 
	window. Fixes #314748. 

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* exchange-account-setup.c: